# Rpi-RGB_LEDControl-AndroidApp

./: LICENSE  README.md
BTApp_Rpi/: CMakeLists.txt  README.md  pi.cmake
BTApp_Rpi/src/: CMakeLists.txt  main.c
BluetoothApp_Android/: settings.gradle
BluetoothApp_Android/Bluetooth/: build.gradle
BluetoothApp_Android/Bluetooth/src/androidTest/java/com/example/pranav/BluetoothApp/: ExampleInstrumentedTest.java
BluetoothApp_Android/Bluetooth/src/main/: AndroidManifest.xml  BT.xcf
BluetoothApp_Android/Bluetooth/src/main/java/com/example/pranav/BluetoothApp/: MainActivity.java  SplashScreen.java
BluetoothApp_Android/Bluetooth/src/main/res/anim/: myanimation.xml
BluetoothApp_Android/Bluetooth/src/main/res/layout/: activity_main.xml  activity_splash_screen.xml
BluetoothApp_Android/Bluetooth/src/main/res/values/: colors.xml  strings.xml
BluetoothApp_Android/Bluetooth/src/test/java/com/example/pranav/BluetoothApp/: ExampleUnitTest.java
BluetoothApp_Android/gradle/wrapper/: gradle-wrapper.properties
